--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <h1>我们是养猪的</h1>
     <h2>我们的猪肉很好吃</h2>
+    <img src="假装有图片.jpg" alt="假装有图片" />
+    <p>猪是人类的好朋友</p>
   </body>
 </html>
