--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>我们的猪肉很好吃</h2>
     <img src="假装有图片.jpg" alt="假装有图片" />
     <p>猪是人类的好朋友</p>
+    <p>我们老板娘猪饲料买的好，猪肉好好吃</p>
   </body>
 </html>
