--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <img src="假装有图片.jpg" alt="假装有图片" />
     <p>猪是人类的好朋友</p>
     <p>我们老板娘猪饲料买的好，猪肉好好吃</p>
+
+    <h1>老板娘：快来买我们的猪肉</h1>
   </body>
 </html>
